--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ langchain-openai>=0.3.14
 langchain-core>=0.3.56
 pandas>=2.2.3
 python-dotenv>=1.1.0
-openinference-instrumentation-langchain>=0.1.0
+openinference-instrumentation-langchain>=0.1.41  # Updated to latest available
 arize-phoenix-otel>=0.9.2
 pydantic>=2.11.3
+arize-phoenix[evals]>=8.27.1
