--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ openinference-instrumentation-langchain>=0.1.41  # Updated to latest available
 arize-phoenix-otel>=0.9.2
 pydantic>=2.11.3
 arize-phoenix[evals]>=8.27.1
+openai>=1.30.0
