16 Adding code to enable Langgraph Studio using langgraph dev

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ langgraph>=0.3.34
 langchain>=0.3.24
 langchain-openai>=0.3.14
 langchain-core>=0.3.56
+langchain-mcp-adapters>=0.1.0
 pandas>=2.2.3
 python-dotenv>=1.1.0
 openinference-instrumentation-langchain>=0.1.41  # Updated to latest available
@@ -11,3 +12,4 @@ arize-phoenix[evals]>=8.27.1
 openai>=1.30.0
 ipykernel>=6.24.0
 ipywidgets
+mcp>=0.3.0
