--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Python/data ignores
 .env
 DOCS/
 __pycache__/
@@ -9,3 +10,24 @@ htmlcov/
 .ipynb_checkpoints
 data/czsu_data.db
 metadata/czsu_chromadb/
+
+# Node/Next.js/Frontend ignores
+node_modules/
+.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+coverage/
+.next/
+out/
+build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+*.tsbuildinfo
+next-env.d.ts
+.vercel
