--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,213 @@
-langgraph>=0.3.34
-langchain>=0.3.24
-langchain-openai>=0.3.14
-langchain-core>=0.3.56
-langchain-mcp-adapters>=0.1.0
-pandas>=2.2.3
-python-dotenv>=1.1.0
-openinference-instrumentation-langchain>=0.1.41  # Updated to latest available
-arize-phoenix-otel>=0.9.2
-pydantic>=2.11.3
-arize-phoenix[evals]>=8.27.1
-openai>=1.30.0
-ipykernel>=6.24.0
-ipywidgets
-mcp>=0.3.0
-pyjstat
-chromadb
-langchain-chroma>=0.2.4
-rank_bm25
-cohere
-openpyxl
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.4
+aioitertools==0.12.0
+aiosignal==1.3.2
+aiosqlite==0.21.0
+alembic==1.15.2
+annotated-types==0.7.0
+anyio==4.9.0
+appdirs==1.4.4
+arize-phoenix==10.2.2
+arize-phoenix-client==1.3.0
+arize-phoenix-evals==0.20.6
+arize-phoenix-otel==0.10.1
+asgiref==3.8.1
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+attrs==25.3.0
+Authlib==1.5.2
+backoff==2.2.1
+bcrypt==4.3.0
+build==1.2.2.post1
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+chromadb==1.0.11
+click==8.1.8
+cohere==5.15.0
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
+coloredlogs==15.0.1
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+cryptography==44.0.2
+dataclasses-json==0.6.7
+debugpy @ file:///D:/bld/debugpy_1744321277463/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+Deprecated==1.2.18
+distro==1.9.0
+dnspython==2.7.0
+durationpy==0.10
+email_validator==2.2.0
+et_xmlfile==2.0.0
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1745502089858/work
+fastapi==0.115.9
+fastavro==1.11.1
+filelock==3.18.0
+flatbuffers==25.2.10
+frozenlist==1.6.0
+fsspec==2025.5.1
+google-auth==2.40.2
+googleapis-common-protos==1.70.0
+graphql-core==3.2.6
+graphviz==0.20.3
+greenlet==3.2.1
+griffe==1.7.3
+grpc-interceptor==0.15.4
+grpcio==1.71.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.32.1
+humanfriendly==10.0
+idna==3.10
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
+importlib_resources==6.5.2
+ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
+ipython @ file:///D:/bld/bld/rattler-build_ipython_1744033183/work
+ipython_pygments_lexers @ file:///home/conda/feedstock_root/build_artifacts/ipython_pygments_lexers_1737123620466/work
+ipywidgets==8.1.7
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpickle==4.0.5
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
+jupyter_core @ file:///D:/bld/jupyter_core_1727163532151/work
+jupyterlab_widgets==3.0.15
+kubernetes==32.0.1
+langchain==0.3.25
+langchain-chroma==0.2.4
+langchain-community==0.3.24
+langchain-core==0.3.63
+langchain-mcp-adapters==0.1.4
+langchain-openai==0.3.18
+langchain-text-splitters==0.3.8
+langgraph==0.4.7
+langgraph-checkpoint==2.0.26
+langgraph-prebuilt==0.2.2
+langgraph-sdk==0.1.63
+langsmith==0.3.34
+Mako==1.3.10
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+mcp==1.9.2
+mdurl==0.1.2
+mmh3==5.1.0
+mpmath==1.3.0
+multidict==6.4.4
+mypy_extensions==1.1.0
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+networkx==3.4.2
+numpy==2.2.5
+oauthlib==3.2.2
+onnxruntime==1.22.0
+openai==1.82.1
+openinference-instrumentation==0.1.27
+openinference-instrumentation-langchain==0.1.43
+openinference-semantic-conventions==0.1.17
+openpyxl==3.1.5
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp==1.32.1
+opentelemetry-exporter-otlp-proto-common==1.32.1
+opentelemetry-exporter-otlp-proto-grpc==1.32.1
+opentelemetry-exporter-otlp-proto-http==1.32.1
+opentelemetry-instrumentation==0.53b1
+opentelemetry-instrumentation-asgi==0.53b1
+opentelemetry-instrumentation-fastapi==0.53b1
+opentelemetry-proto==1.32.1
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
+opentelemetry-util-http==0.53b1
+orjson==3.10.16
+ormsgpack==1.9.1
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+pillow==11.0.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1742485085/work
+posthog==4.2.0
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1744724089886/work
+propcache==0.3.1
+protobuf==5.29.4
+-e git+https://github.com/michaelmiscanuk/prototype4@043f3653d5d7ee48b58e7e75fbd9d04c27a9d7a8#egg=prototype4
+psutil @ file:///D:/bld/psutil_1740663127374/work
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+pyee==11.1.1
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
+pyjstat==2.4.0
+PyPika==0.48.9
+pyppeteer==2.0.0
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+python-dotenv==1.1.0
+python-multipart==0.0.20
+pytz==2025.2
+pyvis==0.3.2
+pywin32==307
+PyYAML==6.0.2
+pyzmq @ file:///D:/bld/pyzmq_1743831235531/work
+rank-bm25==0.2.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.25.1
+rsa==4.9.1
+scikit-learn==1.6.1
+scipy==1.15.2
+shellingham==1.5.4
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+sqlean.py==3.47.0
+sse-starlette==2.3.5
+stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+starlette==0.45.3
+strawberry-graphql==0.270.1
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+tornado @ file:///D:/bld/tornado_1732615900055/work
+tqdm==4.67.1
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+typer==0.16.0
+types-requests==2.32.0.20250515
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_typing_extensions_1744302253/work
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.2
+watchfiles==1.0.5
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+websocket-client==1.8.0
+websockets==10.4
+widgetsnbextension==4.0.14
+wrapt==1.17.2
+xxhash==3.5.0
+yarl==1.20.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zstandard==0.23.0
