--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ arize-phoenix-client==1.3.0
 arize-phoenix-evals==0.20.6
 arize-phoenix-otel==0.10.1
 asgiref==3.8.1
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+asttokens
 attrs==25.3.0
 Authlib==1.5.2
 backoff==2.2.1
@@ -26,21 +26,16 @@ charset-normalizer==3.4.1
 chromadb==1.0.11
 click==8.1.8
 cohere==5.15.0
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
-coloredlogs==15.0.1
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
-cryptography==44.0.2
-dataclasses-json==0.6.7
-debugpy @ file:///D:/bld/debugpy_1744321277463/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+colorama
+decorator
 Deprecated==1.2.18
 distro==1.9.0
 dnspython==2.7.0
 durationpy==0.10
 email_validator==2.2.0
 et_xmlfile==2.0.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1745502089858/work
+exceptiongroup
+executing
 fastapi==0.115.9
 fastavro==1.11.1
 filelock==3.18.0
@@ -63,13 +58,13 @@ httpx-sse==0.4.0
 huggingface-hub==0.32.1
 humanfriendly==10.0
 idna==3.10
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
+importlib_metadata
 importlib_resources==6.5.2
-ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
-ipython @ file:///D:/bld/bld/rattler-build_ipython_1744033183/work
-ipython_pygments_lexers @ file:///home/conda/feedstock_root/build_artifacts/ipython_pygments_lexers_1737123620466/work
+ipykernel
+ipython
+ipython_pygments_lexers
 ipywidgets==8.1.7
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+jedi
 Jinja2==3.1.6
 jiter==0.9.0
 joblib==1.4.2
@@ -78,8 +73,8 @@ jsonpickle==4.0.5
 jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///D:/bld/jupyter_core_1727163532151/work
+jupyter_client
+jupyter_core
 jupyterlab_widgets==3.0.15
 kubernetes==32.0.1
 langchain==0.3.25
@@ -98,14 +93,14 @@ Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+matplotlib-inline
 mcp==1.9.2
 mdurl==0.1.2
 mmh3==5.1.0
 mpmath==1.3.0
 multidict==6.4.4
 mypy_extensions==1.1.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+nest_asyncio
 networkx==3.4.2
 numpy==2.2.5
 oauthlib==3.2.2
@@ -132,17 +127,17 @@ ormsgpack==1.9.1
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+parso
+pickleshare
 pillow==11.0.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1742485085/work
+platformdirs
 posthog==4.2.0
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1744724089886/work
+prompt_toolkit
 propcache==0.3.1
 protobuf==5.29.4
 -e git+https://github.com/michaelmiscanuk/prototype4@043f3653d5d7ee48b58e7e75fbd9d04c27a9d7a8#egg=prototype4
-psutil @ file:///D:/bld/psutil_1740663127374/work
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+psutil
+pure_eval
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -151,20 +146,20 @@ pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pyee==11.1.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
+Pygments
 pyjstat==2.4.0
 PyPika==0.48.9
 pyppeteer==2.0.0
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+python-dateutil
 python-dotenv==1.1.0
 python-multipart==0.0.20
 pytz==2025.2
 pyvis==0.3.2
 pywin32==307
 PyYAML==6.0.2
-pyzmq @ file:///D:/bld/pyzmq_1743831235531/work
+pyzmq
 rank-bm25==0.2.2
 referencing==0.36.2
 regex==2024.11.6
@@ -177,12 +172,12 @@ rsa==4.9.1
 scikit-learn==1.6.1
 scipy==1.15.2
 shellingham==1.5.4
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+six
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 sqlean.py==3.47.0
 sse-starlette==2.3.5
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+stack_data
 starlette==0.45.3
 strawberry-graphql==0.270.1
 sympy==1.14.0
@@ -190,24 +185,24 @@ tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.9.0
 tokenizers==0.21.1
-tornado @ file:///D:/bld/tornado_1732615900055/work
+tornado
 tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+traitlets
 typer==0.16.0
 types-requests==2.32.0.20250515
 typing-inspect==0.9.0
 typing-inspection==0.4.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_typing_extensions_1744302253/work
+typing_extensions
 tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
 watchfiles==1.0.5
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+wcwidth
 websocket-client==1.8.0
 websockets==10.4
 widgetsnbextension==4.0.14
 wrapt==1.17.2
 xxhash==3.5.0
 yarl==1.20.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zipp
 zstandard==0.23.0
