--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,18 @@
 DOCS/
 __pycache__/
 *.py[cod]
+*.py[oc]
 *$py.class
 .pytest_cache/
 .coverage
 htmlcov/
 .ipynb_checkpoints
+*.egg-info
+build/
+dist/
+wheels/
+.venv
+
 data/czsu_data.db
 data/CSVs
 metadata/czsu_chromadb/
@@ -25,7 +32,6 @@ node_modules/
 coverage/
 .next/
 out/
-build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
