--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,3 @@
-previews:
-  generation: automatic
-
 services:
   - type: web
     name: czsu-multi-agent-text-to-sql
@@ -10,6 +7,7 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
+      - fromGroup: czsu-multi-agent-text-to-sql-env-group
     healthCheckPath: /docs
     autoDeploy: true
     plan: free
