35e Adding destinations in vercel.json

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,6 +3,14 @@
     {
       "source": "/api/(.*)",
       "destination": "https://czsu-multi-agent-text-to-sql.onrender.com/api/$1"
+    },
+    {
+      "source": "/api/analyze",
+      "destination": "https://czsu-multi-agent-text-to-sql.onrender.com/analyze"
+    },
+    {
+      "source": "/analyze",
+      "destination": "https://czsu-multi-agent-text-to-sql.onrender.com/analyze"
     }
   ]
 }
