--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ authors = [ { name = "Michael Miscanuk Name", email = "michael.miscanuk@gmail.co
 # Auth/Security: Authlib, bcrypt, oauthlib, requests-oauthlib, rsa
 # Monitoring/Tracing: opentelemetry-*, openinference-*, posthog, arize-phoenix-*, griffe, grpcio, grpc-interceptor, graphviz
 # Other: anyio, asgiref, appdirs, filelock, build, Deprecated, distro, dnspython, mmh3, mmh3, propcache, overrides, pyee, shellingham, etc.
+# JSON Web Token library: pyjwt
 dependencies = [
     "aiofiles==24.1.0",
     "aiohappyeyeballs==2.6.1",
@@ -218,6 +219,7 @@ dependencies = [
     "yarl==1.20.0",
     "zipp",
     "zstandard==0.23.0",
+    "pyjwt",
 ]
 
 [project.optional-dependencies]
