--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "idb": "^7.1.1",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
