--- a/pyproject.toml
+++ b/pyproject.toml
@@ -220,6 +220,9 @@ dependencies = [
     "zipp",
     "zstandard==0.23.0",
     "pyjwt",
+    "aiosqlite",
+    "typing-inspection",
+    "langgraph-checkpoint-sqlite",
 ]
 
 [project.optional-dependencies]
