48 Setting Async PostgreSQL Checkpointer, Supabase PosgreSQL; Improving Frontend unification with CSS classes; improving scalability with custom reducer to keep only 10 latest queries for reflect node; adding thinking circle etc.

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,10 @@ PHOENIX_API_KEY=
 PHOENIX_CLIENT_HEADERS=
 PHOENIX_COLLECTOR_ENDPOINT=
 
-# DEBUG
+# This Application Configurations
 MY_AGENT_DEBUG=1
+MAX_ITERATIONS=2
+MAX_QUERIES_LIMIT_FOR_REFLECT=10
 
 # LANGSMITH
 LANGSMITH_TRACING=true
@@ -31,3 +33,10 @@ GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 NEXTAUTH_SECRET=""  # generate using: openssl rand -base64 32
 NEXT_PUBLIC_API_BASE=http://localhost:8000
+
+# Supabase
+user=
+password=
+host=aws-0-eu-central-2.pooler.supabase.com
+port=5432
+dbname=postgres
