49 OLLAMA model setup for local experimenting for later evaluation of local models; Improvement in Checkpointer to delete thread_id in checkpointer tables when chat is deleted; Testing scripts for postgresql.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -224,7 +224,8 @@ dependencies = [
     "typing-inspection",
     "langgraph-checkpoint-sqlite",
     "langgraph-checkpoint-postgres==2.0.21",
-    "psycopg[binary]==3.2.4"
+    "psycopg[binary]==3.2.4",
+    "langgraph_checkpoint_postgres"
 ]
 
 [project.optional-dependencies]
