60 Postgres - Change port to Transactional pool - in .env to fix session pool issues

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,10 @@ password=
 host=aws-0-eu-central-2.pooler.supabase.com
 port=5432
 dbname=postgres
+
+# Supabase - Transaction pooler
+user=
+password=
+host=aws-0-eu-central-2.pooler.supabase.com
+port=6543
+dbname=postgres
