--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: czsu-multi-agent-text-to-sql
     runtime: python
-    buildCommand: 'export PATH="/opt/render/.local/bin:$PATH" && curl -LsSf https://astral.sh/uv/install.sh | sh && uv pip install -e . && python unzip_files.py'
+    buildCommand: export PATH=\"/opt/render/.local/bin:\$PATH\" && curl -LsSf https://astral.sh/uv/install.sh | sh && uv pip install -e . && python unzip_files.py
     startCommand: uvicorn api_server:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
