--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: czsu-multi-agent-text-to-sql
     runtime: python
     buildCommand: uv pip install . && python unzip_files.py
-    startCommand: uvicorn api_server:app --host 0.0.0.0 --port $PORT
+    startCommand: python -m uvicorn api_server:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
