--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: czsu-multi-agent-text-to-sql
     runtime: python
-    buildCommand: uv pip install -r requirements.txt && python unzip_files.py
-    startCommand: uvicorn api_server:app --host 0.0.0.0 --port $PORT
+    buildCommand: python -m uv pip install -r requirements.txt && python unzip_files.py
+    startCommand: python -m uvicorn api_server:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
