--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: czsu-multi-agent-text-to-sql
     runtime: python
-    buildCommand: python -m uv pip install -r requirements.txt && python unzip_files.py
+    buildCommand: python -m pip install -r requirements.txt && python unzip_files.py
     startCommand: python -m uvicorn api_server:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
