74 Memory Optimizations for Render

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,8 @@ password=
 host=aws-0-eu-central-2.pooler.supabase.com
 port=6543
 dbname=postgres
+
+# Postgres Pool Settings
+POSTGRES_POOL_MAX=3
+POSTGRES_POOL_MIN=1
+POSTGRES_POOL_TIMEOUT=120
