--- a/requirements.txt
+++ b/requirements.txt
@@ -1,210 +1,82 @@
-aiofiles==24.1.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.4
-aioitertools==0.12.0
-aiosignal==1.3.2
-aiosqlite==0.21.0
-alembic==1.15.2
-annotated-types==0.7.0
-anyio==4.9.0
-appdirs==1.4.4
-arize-phoenix==10.2.2
-arize-phoenix-client==1.3.0
-arize-phoenix-evals==0.20.6
-arize-phoenix-otel==0.10.1
-asgiref==3.8.1
-asttokens
-attrs==25.3.0
-Authlib==1.5.2
-backoff==2.2.1
-bcrypt==4.3.0
-build==1.2.2.post1
-cachetools==5.5.2
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-chromadb==1.0.11
-click==8.1.8
-cohere==5.15.0
-colorama
-decorator
-Deprecated==1.2.18
-distro==1.9.0
-dnspython==2.7.0
-durationpy==0.10
-email_validator==2.2.0
-et_xmlfile==2.0.0
-exceptiongroup
-executing
+# Core API and FastAPI
 fastapi==0.115.9
-fastavro==1.11.1
-filelock==3.18.0
-flatbuffers==25.2.10
-frozenlist==1.6.0
-fsspec==2025.5.1
-google-auth==2.40.2
-googleapis-common-protos==1.70.0
-graphql-core==3.2.6
-graphviz==0.20.3
-greenlet==3.2.1
-griffe==1.7.3
-grpc-interceptor==0.15.4
-grpcio==1.71.0
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.32.1
-humanfriendly==10.0
-idna==3.10
-importlib_metadata
-importlib_resources==6.5.2
-ipykernel
-ipython
-ipython_pygments_lexers
-ipywidgets==8.1.7
-jedi
-Jinja2==3.1.6
-jiter==0.9.0
-joblib==1.4.2
-jsonpatch==1.33
-jsonpickle==4.0.5
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter_client
-jupyter_core
-jupyterlab_widgets==3.0.15
-kubernetes==32.0.1
-langchain==0.3.25
-langchain-chroma==0.2.4
-langchain-community==0.3.24
-langchain-core==0.3.63
-langchain-mcp-adapters==0.1.4
-langchain-openai==0.3.18
-langchain-text-splitters==0.3.8
-langgraph==0.4.7
-langgraph-checkpoint==2.0.26
-langgraph-prebuilt==0.2.2
-langgraph-sdk==0.1.63
-langsmith==0.3.34
-Mako==1.3.10
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib-inline
-mcp==1.9.2
-mdurl==0.1.2
-mmh3==5.1.0
-mpmath==1.3.0
-multidict==6.4.4
-mypy_extensions==1.1.0
-nest_asyncio
-networkx==3.4.2
-numpy==2.2.5
-oauthlib==3.2.2
-onnxruntime==1.22.0
-openai==1.82.1
-openinference-instrumentation==0.1.27
-openinference-instrumentation-langchain==0.1.43
-openinference-semantic-conventions==0.1.17
-openpyxl==3.1.5
-opentelemetry-api==1.32.1
-opentelemetry-exporter-otlp==1.32.1
-opentelemetry-exporter-otlp-proto-common==1.32.1
-opentelemetry-exporter-otlp-proto-grpc==1.32.1
-opentelemetry-exporter-otlp-proto-http==1.32.1
-opentelemetry-instrumentation==0.53b1
-opentelemetry-instrumentation-asgi==0.53b1
-opentelemetry-instrumentation-fastapi==0.53b1
-opentelemetry-proto==1.32.1
-opentelemetry-sdk==1.32.1
-opentelemetry-semantic-conventions==0.53b1
-opentelemetry-util-http==0.53b1
-orjson==3.10.16
-ormsgpack==1.9.1
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-parso
-pickleshare
-pillow==11.0.0
-platformdirs
-posthog==4.2.0
-prompt_toolkit
-propcache==0.3.1
-protobuf==5.29.4
-psutil
-pure_eval
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
+uvicorn==0.34.2
+starlette==0.45.3
+python-multipart==0.0.20
+
+# Pydantic for data validation
 pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
-pyee==11.1.1
-Pygments
-pyjstat==2.4.0
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-python-dateutil
-python-dotenv==1.1.0
-python-multipart==0.0.20
-pytz==2025.2
-pyvis==0.3.2
-PyYAML==6.0.2
-pyzmq
-rank-bm25==0.2.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==14.0.0
-rpds-py==0.25.1
-rsa==4.9.1
-scikit-learn==1.6.1
-scipy==1.15.2
-shellingham==1.5.4
-six
-sniffio==1.3.1
-SQLAlchemy==2.0.40
-sqlean.py==3.47.0
-sse-starlette==2.3.5
-stack_data
-starlette==0.45.3
-strawberry-graphql==0.270.1
-sympy==1.14.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tiktoken==0.9.0
-tokenizers==0.21.1
-tornado
-tqdm==4.67.1
-traitlets
-typer==0.16.0
-types-requests==2.32.0.20250515
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-typing_extensions
-tzdata==2025.2
-uvicorn==0.34.2
-watchfiles==1.0.5
-wcwidth
-websocket-client==1.8.0
-websockets==10.4
-widgetsnbextension==4.0.14
-wrapt==1.17.2
-xxhash==3.5.0
-yarl==1.20.0
-zipp
-zstandard==0.23.0
-pyjwt
-aiosqlite
-typing-inspection
-langgraph-checkpoint-sqlite
+
+# LangChain ecosystem (core)
+langchain==0.3.25
+langchain-core==0.3.63
+langchain-openai==0.3.18
+langchain-chroma==0.2.4
+langchain-community==0.3.24
+langchain-text-splitters==0.3.8
+langgraph==0.4.7
+langgraph-checkpoint==2.0.26
 langgraph-checkpoint-postgres==2.0.21
+langsmith==0.3.34
+
+# OpenAI and Azure OpenAI
+openai==1.82.1
+
+# ChromaDB for vector search
+chromadb==1.0.11
+
+# Cohere for reranking
+cohere==5.15.0
+
+# PostgreSQL database
 psycopg[binary]==3.2.4
-langgraph_checkpoint_postgres
+psycopg-pool==3.2.6
+SQLAlchemy==2.0.40
+alembic==1.15.2
+
+# Authentication
+authlib==1.5.2
+PyJWT==2.10.1
+
+# Essential utilities
+python-dotenv==1.1.0
+requests==2.32.3
+tqdm==4.67.1
+
+# Data processing
+pandas==2.2.3
+numpy==2.2.5
+openpyxl==3.1.5
+pyjstat==2.4.0
+
+# JSON/serialization
+orjson==3.10.16
+PyYAML==6.0.2
+
+# MCP server
+mcp==1.9.2
+
+# Async utilities
+aiofiles==24.1.0
+anyio==4.9.0
+
+# Text processing
+tiktoken==0.9.0
+rank-bm25==0.2.2
+
+# HTTP and networking
+httpx==0.28.1
+httpcore==1.0.9
+certifi==2025.1.31
+charset-normalizer==3.4.1
+idna==3.10
+h11==0.16.0
+
+# Templates
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+
+# Type checking
+typing_extensions
