--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,8 @@
 services:
   - type: web
-    name: czsu-multi-agent-text-to-sql
+    name: czsu-multi-agent-backend
     runtime: python
-    buildCommand: python -m pip install -r requirements.txt && python unzip_files.py
-    startCommand: python -m uvicorn api_server:app --host 0.0.0.0 --port $PORT
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.9
-      - fromGroup: czsu-multi-agent-text-to-sql-env-group
-    healthCheckPath: /docs
-    autoDeploy: true
-    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: python -m uvicorn api_server:app --host 0.0.0.0 --port $PORT --log-level info
+    plan: free  # or starter/standard depending on your plan
+    healthCheckPath: /health
