--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,56 @@
 # Core API and FastAPI
-fastapi==0.115.9
-uvicorn==0.34.2
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
 starlette==0.45.3
-python-multipart==0.0.20
+python-multipart>=0.0.6
 
 # Pydantic for data validation
-pydantic==2.11.5
+pydantic>=2.5.0
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 
 # LangChain ecosystem (core)
-langchain==0.3.25
-langchain-core==0.3.63
-langchain-openai==0.3.18
+langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-openai>=0.0.2
 langchain-chroma==0.2.4
-langchain-community==0.3.24
+langchain-community>=0.0.10
 langchain-text-splitters==0.3.8
-langgraph==0.4.7
+langgraph>=0.2.0
 langgraph-checkpoint==2.0.26
-langgraph-checkpoint-postgres==2.0.21
+langgraph-checkpoint-postgres>=2.0.0
 langsmith==0.3.34
+langchain-anthropic>=0.1.0
 
 # OpenAI and Azure OpenAI
 openai==1.82.1
 
 # ChromaDB for vector search
-chromadb==1.0.11
+chromadb>=0.4.18
 
 # Cohere for reranking
 cohere==5.15.0
 
 # PostgreSQL database
-psycopg[binary]==3.2.4
+psycopg[binary,pool]>=3.1.13
 psycopg-pool==3.2.6
-SQLAlchemy==2.0.40
+SQLAlchemy>=2.0.23
+asyncpg>=0.29.0
 alembic==1.15.2
 
 # Authentication
 authlib==1.5.2
-PyJWT==2.10.1
+PyJWT[crypto]>=2.8.0
+python-jose[cryptography]>=3.3.0
 
 # Essential utilities
-python-dotenv==1.1.0
-requests==2.32.3
+python-dotenv>=1.0.0
+requests>=2.31.0
 tqdm==4.67.1
 
 # Data processing
-pandas==2.2.3
-numpy==2.2.5
+pandas>=2.1.3
+numpy>=1.25.2
 openpyxl==3.1.5
 pyjstat==2.4.0
 
@@ -59,7 +62,7 @@ pymupdf>=1.26.0
 # llama-parse>=0.4.0  # Premium LLM-based parser (requires API key)
 
 # JSON/serialization
-orjson==3.10.16
+orjson>=3.9.10
 PyYAML==6.0.2
 
 # MCP server
@@ -71,7 +74,8 @@ anyio==4.9.0
 
 # Text processing
 tiktoken==0.9.0
-rank-bm25==0.2.2
+rank-bm25>=0.2.2
+sentence-transformers>=2.2.2
 
 # HTTP and networking
 httpx==0.28.1
@@ -87,3 +91,6 @@ MarkupSafe==3.0.2
 
 # Type checking
 typing_extensions
+
+# Monitoring and utilities
+psutil>=5.9.0
