--- a/requirements.txt
+++ b/requirements.txt
@@ -54,12 +54,8 @@ numpy>=1.25.2
 openpyxl==3.1.5
 pyjstat==2.4.0
 
-# PDF Processing
-pymupdf>=1.26.0
-
-# Optional: Enhanced PDF parsing (uncomment to enable)
-# pymupdf4llm>=0.0.5  # Better table handling for LLMs
-# llama-parse>=0.4.0  # Premium LLM-based parser (requires API key)
+# PDF Processing - LlamaParse only
+llama-parse>=0.4.0  # Premium LLM-based parser (requires API key)
 
 # JSON/serialization
 orjson>=3.9.10
@@ -75,7 +71,6 @@ anyio==4.9.0
 # Text processing
 tiktoken==0.9.0
 rank-bm25>=0.2.2
-sentence-transformers>=2.2.2
 
 # HTTP and networking
 httpx==0.28.1
