114a Postgres Checkpoint Adjustments 2

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,12 @@ PHOENIX_API_KEY=
 PHOENIX_CLIENT_HEADERS=
 PHOENIX_COLLECTOR_ENDPOINT=
 
-# This Application Configurations
-MY_AGENT_DEBUG=1
-MAX_ITERATIONS=2
+# DEBUG
+DEBUG=1
+AGENT_DEBUG=0
+
+# AGENT
+MAX_ITERATIONS=1
 MAX_QUERIES_LIMIT_FOR_REFLECT=10
 
 # LANGSMITH
