133 Solving Concurrency in  /analyze endpoint and testing script for concurrency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,7 +119,11 @@ dev = [
     "psutil>=5.9.0",
 
     # Graphs
-    "graphviz"
+    "graphviz",
+
+    # Testing
+    "pytest",
+    "httpx"
 ]
 
 [build-system]
