174 Adding to setup file to add vscode workspace config; Adding SSL Error retry code; standardizing code piece for BASE_DIR and sys path for local imports in test files. SSL Test file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,7 +132,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["api*", "tests*", "my_agent*", "data*", "metadata*"]
+include = ["api*", "tests*", "my_agent*", "data*", "metadata*", "checkpointer*"]
 
 [tool.setuptools.package-data]
 "*" = ["*.py", "*.txt", "*.md", "*.json", "*.yaml", "*.yml", "*.toml", "*.cfg", "*.ini"]
