183 New Parsed PDF using new instrutions. New Chunked chromadb based on this parsed pdf. Adjusting unzip and zip scripts to work with large folder of llamaparse chromadb - now it is semi manually uploaded to gdrive in zip, and downloaded back (when deployed) using gdown library in unzip script.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "python.analysis.extraPaths": [
         "${workspaceFolder}"
     ],
-    "python.envFile": "${workspaceFolder}/.env"
+    "python.envFile": "${workspaceFolder}/.env",
+    "python-envs.pythonProjects": []
 }
