194w Dockerfile - adjusting back to chromadb library instead of chromadb-client. Switch to lightweight debian instead of alpine in dockerfile.

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,8 +27,8 @@ langchain-anthropic>=0.1.0
 # OpenAI and Azure OpenAI
 openai==1.82.1
 
-# ChromaDB for vector search (client-only, no onnxruntime dependency)
-chromadb-client==1.1.1
+# ChromaDB for vector search (full package for persistent storage)
+chromadb>=0.5.0
 
 # Cohere for reranking
 cohere==5.15.0
