200 Migrating ChromaDB to the Chroma Cloud. Local to cloud coopy script, adjust code to work with cloud and local based on env variable.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,5 @@
     "python.analysis.extraPaths": [
         "${workspaceFolder}"
     ],
-    "python.envFile": "${workspaceFolder}/.env",
-    "python-envs.pythonProjects": []
+    "python.envFile": "${workspaceFolder}/.env"
 }
