204b corrections in railway.toml

--- a/railway.toml
+++ b/railway.toml
@@ -35,7 +35,7 @@ runtime = "V2"
 numReplicas = 1
 
 # Memory limit override
-limitOverride = {"containers":{"memoryBytes":4000000000}}
+limitOverride = {containers = {memoryBytes = 4000000000}}
 
 # Sleep application when inactive
 sleepApplication = true
@@ -44,7 +44,7 @@ sleepApplication = true
 useLegacyStacker = false
 
 # Multi-region configuration
-multiRegionConfig = {"europe-west4-drams3a":{"numReplicas":1}}
+multiRegionConfig = {"europe-west4-drams3a" = {numReplicas = 1}}
 
 # Deployment lifecycle settings
 # overlapSeconds = 60  # Time new and old deploys overlap
