288 Implementing Brontli compresion instead of GZIP for FastApi. Adding back AI followup prompts, switching with hardcoded list based on env variable. Separating followup function into its own module in my_agent

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ LANGSMITH_API_KEY=your-langsmith-api-key-here
 LANGSMITH_TRACING=true
 LANGSMITH_ENDPOINT=https://api.smith.langchain.com
 
+# FOLLOWUP PROMPTS CONFIGURATION
+# Strategy for generating initial followup prompts for new conversations
+# Options: "template" (default, fast, no API calls) or "ai" (uses GPT-4o-mini, more creative)
+FOLLOWUP_PROMPTS_STRATEGY=ai
+
 # DEBUG FLAGS
 DEBUG=0
 print__chromadb_debug=0
