--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,24 @@
     },
     "code-runner.fileDirectoryAsCwd": false,
     "code-runner.respectShebang": false,
-    "python-envs.pythonProjects": []
+    "python-envs.pythonProjects": [],
+    "terminal.integrated.env.windows": {},
+    "terminal.integrated.cwd": "${workspaceFolder}",
+    "terminal.integrated.defaultProfile.windows": "Command Prompt",
+    "terminal.integrated.profiles.windows": {
+        "Command Prompt": {
+            "path": "cmd.exe",
+            "args": ["/K", ".venv\\Scripts\\activate.bat"],
+            "icon": "terminal-cmd"
+        },
+        "PowerShell": {
+            "source": "PowerShell",
+            "args": ["-NoExit", "-Command", "& '.venv\\Scripts\\Activate.ps1'"],
+            "icon": "terminal-powershell"
+        }
+    },
+    "terminal.integrated.automationProfile.windows": {
+        "path": "cmd.exe",
+        "args": ["/K", ".venv\\Scripts\\activate.bat"]
+    }
 }
