335 Adding Ability to use Mistral Models. Guide to add other providers.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,28 @@
 			],
 			"isBackground": false,
 			"group": "test"
+		},
+		{
+			"label": "Install langchain-mistralai",
+			"type": "shell",
+			"command": "cmd",
+			"args": [
+				"/c",
+				"cd /d \"e:\\OneDrive\\Knowledge Base\\0207_GenAI\\Code\\czsu_home2\\czsu-multi-agent-text-to-sql\" && call .venv\\Scripts\\activate.bat && pip install langchain-mistralai"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Run models.py",
+			"type": "shell",
+			"command": "cmd",
+			"args": [
+				"/c",
+				"cd /d \"e:\\OneDrive\\Knowledge Base\\0207_GenAI\\Code\\czsu_home2\\czsu-multi-agent-text-to-sql\" && call .venv\\Scripts\\activate.bat && python my_agent\\utils\\models.py"
+			],
+			"isBackground": false,
+			"group": "test"
 		}
 	]
 }
